// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Content is working properly 1`] = `
<div
  class="drawer-pf-notification-content"
>
  <div>
    Child
  </div>
</div>
`;

exports[`Notification Info Left is working properly 1`] = `
<span
  class="date"
>
  left
</span>
`;

exports[`Notification Info Right is working properly 1`] = `
<span
  class="time"
>
  right
</span>
`;

exports[`Notification Info is working properly 1`] = `
<div
  class="drawer-pf-notification-info"
>
  <span
    class="date"
  />
  <span
    class="time"
  />
</div>
`;

exports[`Notification Message is working properly 1`] = `
<span
  class="drawer-pf-notification-message"
>
  <div>
    Child
  </div>
</span>
`;

exports[`Notification is working properly 1`] = `
<div
  class="drawer-pf-notification unread"
>
  <div>
    Child
  </div>
</div>
`;
